--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,13 @@ sha2 = { version = "^0.9" }
 rayon = { version = "1", optional = true }
 thiserror = { version = "^1.0" }
 merlin = { version = "^3.0" }
+ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
+ark-snark = { version = "0.3.0", default-features = false }
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 
 [dev-dependencies]
-ark-bn254 = { version = "^0.3.0", default-features = false, features = ["curve"] }
 rand_chacha = "0.3"
 
 [features]
